syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "net.skycomposer.betting.market.grpc";
option java_outer_classname = "MarketProto";

message FixtureData {
 	string id = 1;
 	string homeTeam = 2;
 	string awayTeam = 3;	
} 

message OddsData {
	double winHome = 1;
	double winAway = 2;
	double tie = 3;
}

message MarketData {
	string marketId = 1;
	FixtureData fixture = 2;
	OddsData odds = 3;
	enum Result {
		HOME_WINS = 0;
		HOME_LOSES = 1;
		TIE = 2;
	}
	Result result = 4;
	uint64 opensAt = 5;
	bool open = 6;
}

message MarketId {
	string marketId = 1;
}

message Response {
	string message = 1;
}

message CancelMarket {
	string marketId = 1;
	string reason = 2;
}

message CloseMarketMessage {
	string marketId = 1;
	int32 result = 2;
}

message MarketList {
	repeated MarketData markets = 1;
}

service MarketService {

	rpc Open(MarketData) returns (Response) {}

	rpc Update(MarketData) returns (Response) {}

	rpc CloseMarket(CloseMarketMessage) returns (Response) {}
	//Adding the 'Market' suffix is necessary to avoid conflict with an already existing
	// close methods in Akka-gRPC that is generated by default
	// more details in https://doc.akka.io/docs/akka-grpc/current/client/details.html#client-lifecycle

	rpc Cancel(CancelMarket) returns (Response) {}

	rpc GetState(MarketId) returns (MarketData){}

	rpc GetAllMarkets(google.protobuf.Empty) returns (MarketList) {}
}